syntax = "proto3";

package perm.v1;

option go_package = "./permpb;permpb";

service MenuService {
  // ListMenus returns available menus with hierarchy.
  rpc ListMenus (ListMenusRequest) returns (ListMenusResponse) {}
}

message ListMenusRequest {
  string platform = 1;
}

message ListMenusResponse {
  repeated MenuItem items = 1;
}

message MenuItem {
  string code = 1;
  string type = 2;
  string name = 3;
  repeated MenuItem children = 4;
}
